# lp_wrappers

./: .gitignore  CMakeLists.txt
cmake/: FindGUROBI.cmake
example/: case  cplex_lp_multiple_times.cpp  general_lp_solver.cpp  gurobi_lp_multiple_times.cpp
include/lp_wrappers/: cplex.hpp  gurobi.hpp  problem.hpp  types.hpp
